# ViLog

./: .gitignore  Cargo.toml  NOTICE  README.md  vilog.toml  vilog_VCMU.toml
.github/workflows/: build.yml  test.yml
docs/: data points.txt
src/: config.rs  dtc.rs  influxdb.rs  main.rs
tests/: dtc_read_test.rs
tests/testdata/: 258_1.json  258_2.json  258_3.json  260_1.json  262_1.json  264_1.json  266_1.json
