[package]
name = "ViLog"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
rumqttc = { version = "0.25", default-features = false,features = ["use-native-tls"] }
tokio = "1.48.0"
time = "0.3.44"
pretty_env_logger = "0.5.0"
log = "0.4.22"
toml = "0.8.19"
