[package]
name = "ViLog"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rumqttc = { version = "0.25", default-features = false,features = ["use-native-tls"] }
tokio = { version = "1.48.0", features = ["rt","macros","time"] }
pretty_env_logger = "0.5.0"
log = "0.4.28"
toml = "0.9.8"
reqwest = { version = "0.12.24", default-features = true }
chrono = "0.4.42"
